# veille-parlementaire-sport

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  ROLLBACK.md  commit_R22.command  commit_R22a.command  commit_R22b.command  commit_R22i.command  commit_R23a.command  commit_R23bc.command  commit_R23c2.command  commit_R23c3.command  commit_R23c4_c5_m.command  commit_R23d.command  commit_R23de.command  commit_R23f.command  commit_R23gh.command  commit_R23ij.command  commit_R24.command  deploy_R19.command  diag_R36F_run.command  finish_R19.command  pyproject.toml  reset_cr_R38.command  reset_db_full.command  run_clean_R22.command
.claude/: settings.json
config/: blocklist.yml  blocklist_agenda.yml  keywords.yml  sources.yml  special_ppl_analysis.yml  special_ppl_votes_finaux.yml  sport_backfill_senat_2024.yml  sport_membership_manual.yml  sport_reports_manual.yml
data/: agenda_diag_ppl_sport_pro.json  amo_resolved.json  an_cr_state.json  an_dossier_text_404.json  an_texte_to_dossier.json  an_texte_to_libelles.json  email_status.json  last_digest.html  min_sports_debug.json  ping_state.json  pipeline_health.json  senat_dossier_text_404.json  senat_rap_mono_404.json  senat_slugs.json  test_e2e.sqlite3-journal
docs/: AGENDA_SOURCES_AUDIT.md  AUDIT_R19.md  cloudflare_proxy_setup.md
scripts/: audit_sources.py  backfill.py  build_senat_slugs.py  cloudflare_worker.js  parlementaires_sport.py  refresh_amo_cache.py  reset_category.py  run_clean.sh  sync_from_prod.sh
site/: hugo.toml
src/: amo_loader.py  assemblee_organes.py  digest.py  keywords.py  main.py  models.py  monitoring.py  nominations.py  normalize.py  ping.py  ping_state.py  run_mode.py  senat_slugs.py  site_export.py  special_equipements.py  special_ppl.py  store.py  test_email_cli.py  text_haystack_cache.py  textclean.py
tests/: conftest.py  fixture_min_sports_agenda_2026-05-11.html  test_agenda_normalize.py  test_agenda_title_r23g.py  test_amo_loader.py  test_assemblee_amendement_parser.py  test_assemblee_question_parser.py  test_common_fetch.py  test_contracts_sources.py  test_data_gouv_agenda.py  test_digest.py  test_keywords.py  test_min_sports_agenda.py  test_monitoring.py  test_parse_iso_naive.py  test_ping.py  test_ping_state.py  test_r25b_senat_questions.py  test_r26_jorf.py  (+105 more)
(+58 files in other folders)
